--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,4 @@
 *{
-  margin: 10px;
+  margin: 0;
   padding: 0;
-}
-
-.App{
-  display: flex;
-  flex-direction: column;
-}
-.Main{
-  display: flex;
-  flex-direction: row;
-}
-
-/* .produtos{
-  display: grid;
-  grid-template-columns:  repeat(5, 1fr);
-} */
-
-.cardProdutos{
-  display: flex;
-  flex-direction: column;
-  border: solid black 1px;
-  align-items: center;
-}
-
-.listaProdutos{
-  display: grid;
-  grid-template-columns:  repeat(4, 1fr);
-}
-.imagemProduto{
-  height: 200px;
-  width: 200px;
-}
-
-.carrinho{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 300px;
-  height: 80vh;
-  border: solid black 1px;
-}
-.produtoCarrinho{
-  display: flex;
-
-}
-
-.main{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-.filtrosContainer{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 200px;
-  height: 80vh;
-  border: solid black 1px;
-
-}
-.cabecalho {
-  background-color: black;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color:white;
 }
